Sat Oct 17 13:30:06 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* installbin: Take 'startperl' from .mj_config instead of from
 	Config.pm.  Prepend '#!' to it.

	* Makefile.PL (get_file): Sprice up prompting a bit.  Add 'force'
 	parameter which forces the file to exist or be executable.
	(configure): Check for startperl; default from Config.pm but warn
 	if it's bogus.

	* lib/Mj/MTAConfig.pm (sendmail): Add debugging info if 'debug'
 	argument is true.

Fri Oct 16 15:52:47 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* Makefile.PL (configure): Check for version of stored config file
 	and force a reconfiguration if necessary.

	* lib/Majordomo.pm: Bump version number in preparation for
 	snapshot.

	* postinstall (do_config): Use the site password to init the
 	individual master_passwords.  This means that you can change the
 	master_passwords at install time, and that we can avoid that
 	single failure at the begging on non-fresh installs.

	* lib/Mj/Digest.pm (_open_state): Fix problem when loading daved
 	data with nested references.
	(choose): Keep track of 'lastrun' time properly.
	Declare $VAR1 as a package global to prevent failures when
 	autoloading is off.

Thu Oct 15 19:22:11 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_digests): Redo to accept new element
 	order.

	* lib/mj_cf_data.pl: Redo 'digests' description; reorder elements
 	to that little-used and wizardly elements go on the end where they
 	can be left off.

	* lib/Mj/Digest.pm (_close_state): Turn on Data::Dumper::Purity
 	flag so the nested references don't get destroyed.

	* lib/Mj/Config.pm (_str_to_clock): Fix stupid typo.

	* lib/Mj/Digest.pm (decide): Fix undef warning.

	* lib/mj_cf_defs.pl: Change 'digests' default back to an empty
 	listref; this is the _unparsed_ version, so a hashref is
 	definitely not appropriate.

Wed Oct 14 16:51:35 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
