@@ -34,6 +34,30 @@ use vars (qw(%sendsep %supported));
 
 =head2 sendmail
 
+This is the main interface to Sendmail configuration manipulation
+functionality.
+
+By default we want to call one_alias and return the results as we used to.
+
+Given a list of [list, owner] pairs, we can call all_aliases.
+
+Given the location of an alias file, we can append to it or rewrite it from
+scratch.
+
+=cut
+sub sendmail {
+  my %args = @_;
+  my $log = new Log::In 150;
+
+  Mj::MTAConfig::Sendmail::add_alias(%args);
+}
+
+package Mj::MTAConfig::Sendmail;
+use Mj::File;
+use Mj::FileRepl;
+
+=head2 one_alias
+
 This produces a block of aliases suitable for cut and paste into a sendmail
 aliases file, along with a bit of explanation.
 
@@ -42,12 +66,13 @@ Things we need:
   list   => name of list (no list -> produce global aliases)
   bindir => path to executables
   domain => domain this list or majordomo is to serve
+  debug  => whether or not copious debuging is called for
 
 =cut
-sub sendmail {
+sub add_alias {
   my $log  = new Log::In 150;
   my %args = @_;
-  my ($debug);
+  my ($block, $debug, $fh, $head);
   my $bin  = $args{bindir} || $log->abort("bindir not specified");
   my $dom  = $args{domain} || $log->abort("domain not specified");
   my $list = $args{list}   || 'GLOBAL';
@@ -60,29 +85,68 @@ sub sendmail {
     $debug = '';
   }
 
-  my $head = <<EOS;
+  $head = <<EOS;
 Please add the following lines to your aliases file, if they are not
 already present.  You may have to run the "newaliases" command afterwards
 to enable these aliases.
 EOS
 
   if ($list eq 'GLOBAL') {
-    return ($head, qq(# Aliases for Majordomo at $dom
+    $block = <<"EOB";
+# Aliases for Majordomo at $dom
 $who:       "|$bin/mj_email -m -d $dom$debug"
 $who-owner: "|$bin/mj_email -o -d $dom$debug"
 owner-$who: majordomo-owner,
 # End aliases for Majordomo at $dom
-));
+EOB
   }
   else {
-    return ($head, qq(# Aliases for $list at $dom
+    $block = <<"EOB";
+# Aliases for $list at $dom
 $list:         "|$bin/mj_email -r -d $dom -l $list$debug"
 $list-request: "|$bin/mj_email -q -d $dom -l $list$debug"
 $list-owner:   "|$bin/mj_email -o -d $dom -l $list$debug"
 owner-$list:   $list-owner,
 # End aliases for $list at $dom
-));
+EOB
   }
+  if ($args{aliasfile}) {
+    $fh = new Mj::File($args{aliasfile}, '>>');
+    $fh->print($block);
+    $fh->close;
+    return;
+  }
+  return ($head, $block);
+}
+
+=head2 del_alias
+
+Deletes the aliases for a list from the alias file.
+
+=cut
+sub del_alias {
+  my %args = @_;
+
+}
+
+=head2 regen_aliases
+
+This generates a complete set of aliases from a set of lists.  add_alias is
+called repeatedly to generate all of the necessary aliases.
+
+=cut
+sub regen_aliases {
+  my %args = @_;
+  my $fh = new Mj::FileRepl($args{aliasfile});
+
+  # Sort list of lists.
+
+  # Generate GLOBAL aliases.
+
+  # Generate aliases for each given list.
+
+  # Close the file.
+
 }
 
 =head1 COPYRIGHT
